--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#root {
+  max-width: 100%;
+  margin: 0 auto;
+  font-family: 'League Spartan', sans-serif;
+  background-color: #19376d;
+  color: #fff;
+}
